# hybrid-search-demo

./: .gitignore  Dockerfile  Makefile  PIPELINE.md  README.md  TODO.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  requirements.txt
src/: __init__.py  api_server.py  app.py  embed_sentences.py  format_dataset.py  generate_history.py  generate_users.py  load_to_elasticsearch.py  make_article_translation.py  make_dataset.py  make_user_translation.py  search_program.py  search_ui.py  train_two_tower_model.py  two_tower_model.py  visualize.py
src/batch_processing/: embed_sentences.py  format_dataset.py  generate_history.py  generate_users.py  load_to_elasticsearch.py  make_article_translation.py  make_dataset.py  make_item_translation.py  make_user_translation.py  train_two_tower_model.py
src/data_visualization/: visualize.py
src/embedding/: embedding.py  embeddings.py
src/embedding_api/: api.py  api_server.py  client.py  embed_sentences.py  embedding_service.py
src/model/: two_tower_model.py
src/search_api/: app.py  search_program.py  search_ui.py
src/search_app/: es_utils.py  index.html  main.py  search_program.py  search_ui.py  search_util.py  utils.py
src/translation_api/: api.py  client.py
templates/: results.html  search.html
tests/: conftest.py  test_api_server.py  test_embedding.py  test_embedding_api.py  test_embedding_api_client.py  test_format_dataset.py  test_main.py  test_search_app.py  test_search_app_es_utils.py  test_translation_api.py  test_translation_api_client.py  test_utils.py
(+3 files in other folders)
